<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:onClick="hideKeyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".src.signup.RegistActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        android:text="@string/회원가입"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        />


    <TextView
        android:id="@+id/email_text"
        android:layout_width="141dp"
        android:layout_height="12dp"
        android:layout_marginStart="228dp"
        android:layout_marginEnd="42dp"
        android:text="@string/email_error"
        android:textColor="#2C2C2C"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/PW_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="63dp"
        android:text="@string/pw_condition"
        android:textColor="#2C2C2C"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PW_check_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PW_edit"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/PW_check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="251dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="64dp"
        android:text="@string/pw_confirm"
        android:textColor="#2C2C2C"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Nickname_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PW_check_edit"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/Nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="325dp"
        android:text="@string/닉네임"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Nickname_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PW_check_edit"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Nickname_edit"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:layout_marginBottom="101dp"
        android:backgroundTint="@color/white"
        android:hint="사용자 닉네임"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/PW_check_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_register1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TextSizeCheck" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:hint="@string/이메일입력"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/PW_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextSizeCheck" />


    <EditText
        android:id="@+id/PW_edit"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="57dp"
        android:backgroundTint="@color/white"
        android:hint="@string/비밀번호입력"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/PW_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextSizeCheck" />

    <EditText
        android:id="@+id/PW_check_edit"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:hint="@string/비밀번호재확인"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/PW_check_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PW_text"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextSizeCheck" />

    <android.widget.Button
        android:id="@+id/btn_register1"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:backgroundTint="#FFD9D9D9"
        android:text="@string/다음버튼"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />


</androidx.constraintlayout.widget.ConstraintLayout>